# learning-programming

./: README.md
basics/: BASICS.md
heroku/: heroku-commands.txt
linux/: LINUX.md
python/books/fluent-python/: .tool-versions  pyproject.toml
python/books/fluent-python/fluent_python/chapter_1/: 1_index.py  2_deck.py  3_vector.py
python/books/fluent-python/fluent_python/hackerrank/: 1.py  10.py  12.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
python/books/python-cs-problems-book/: pyproject.toml
python/books/python-cs-problems-book/python_cs_problems_book/: 1-fibonacci.py  2-memoization.py  3-auto_memoization  4-simple_fib  test_generators.py  test_yield.py
python/books/python-cs-problems-book/tests/: test_python_cs_problems_book.py
python/books/python-tdd/: pyproject.toml
python/books/python-tdd/python-tdd/: functional_tests.py  manage.py
python/books/python-tdd/python-tdd/python_tdd/: asgi.py  settings.py  urls.py  wsgi.py
python/books/python-tdd/tests/: test_python_tdd.py
python/test_codes/: pyproject.toml
python/test_codes/test_codes/: brodcast_scheduler.py  generate_code.py  get_dates.py
python/utils/: pyproject.toml
python/utils/utils/: credentials.json  download_videos.py  generate_months_list.py  list_comprehension.py
