[tool.poetry]
name = "test-codes"
version = "0.1.0"
description = ""
authors = ["MatheusBLopes <mathesublopes10@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
google-auth-oauthlib = "^0.5.2"
google-api-python-client = "^2.50.0"
pytube = "^12.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
