[tool.poetry]
name = "python-tdd"
version = "0.1.0"
description = ""
authors = ["MatheusBLopes <mathesublopes10@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.3.0"
Django = "^4.0.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
